// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`actions create SET_MOVIE 1`] = `
Array [
  Object {
    "payload": Object {
      "movie": Object {
        "genres": Array [
          "comedies",
        ],
        "id": 1,
        "overview": "Don't miss the fun in this hilariously sexy comedy that has Antonio Banderas (Once Upon a Time in Mexico), Madonna (Swept Away), and a sizzling all-star cast checking in for laughs! It's Ted the Bellhop's (Tim Roth, Pulp Fiction) first night on the job...and the hotel's very unusual guests are about to place him in some outrageous predicaments.",
        "poster_path": "https://images-na.ssl-images-amazon.com/images/I/51qcn-rYWqL._SY450_.jpg",
        "release_date": "1995",
        "runtime": 97,
        "tagline": "Oscar-winning Movies",
        "title": "Four rooms",
        "vote_average": 3,
      },
    },
    "type": "SET_MOVIE",
  },
]
`;

exports[`actions create SET_MOVIE_LIST 1`] = `
Array [
  Object {
    "payload": Object {
      "movies": Array [
        Object {
          "genres": Array [
            "comedies",
          ],
          "id": 1,
          "overview": "Don't miss the fun in this hilariously sexy comedy that has Antonio Banderas (Once Upon a Time in Mexico), Madonna (Swept Away), and a sizzling all-star cast checking in for laughs! It's Ted the Bellhop's (Tim Roth, Pulp Fiction) first night on the job...and the hotel's very unusual guests are about to place him in some outrageous predicaments.",
          "poster_path": "https://images-na.ssl-images-amazon.com/images/I/51qcn-rYWqL._SY450_.jpg",
          "release_date": "1995",
          "runtime": 97,
          "tagline": "Oscar-winning Movies",
          "title": "Four rooms",
          "vote_average": 3,
        },
        Object {
          "genres": Array [
            "action",
            "adventure",
          ],
          "id": 2,
          "overview": "From groundbreaking writer and director Quentin Tarantino KILL BILL VOLUME 1 stars Uma Thurman, Lucy Liu, and Vivica A. Fox in an epic vendetta! Four years after taking a bullet in the head at her own wedding, The Bride emerges from a coma and decides it's time for payback! Having been gunned down by her former boss and his deadly squad of international assassins, it's a kill-or- be- killed fight.",
          "poster_path": "https://images-na.ssl-images-amazon.com/images/I/71XwrZLWOBL._SY450_.jpg",
          "release_date": "2003",
          "runtime": 150,
          "tagline": "Oscar-winning Movies",
          "title": "Kill Bill: Vol. 1",
          "vote_average": 4.5,
        },
        Object {
          "genres": Array [
            "comedies",
          ],
          "id": 3,
          "overview": "Don't miss the fun in this hilariously sexy comedy that has Antonio Banderas (Once Upon a Time in Mexico), Madonna (Swept Away), and a sizzling all-star cast checking in for laughs! It's Ted the Bellhop's (Tim Roth, Pulp Fiction) first night on the job...and the hotel's very unusual guests are about to place him in some outrageous predicaments.",
          "poster_path": "https://images-na.ssl-images-amazon.com/images/I/51qcn-rYWqL._SY450_.jpg",
          "release_date": "1995",
          "runtime": 97,
          "tagline": "Oscar-winning Movies",
          "title": "Four rooms",
          "vote_average": 3,
        },
        Object {
          "genres": Array [
            "action",
            "adventure",
          ],
          "id": 4,
          "overview": "From groundbreaking writer and director Quentin Tarantino KILL BILL VOLUME 1 stars Uma Thurman, Lucy Liu, and Vivica A. Fox in an epic vendetta! Four years after taking a bullet in the head at her own wedding, The Bride emerges from a coma and decides it's time for payback! Having been gunned down by her former boss and his deadly squad of international assassins, it's a kill-or- be- killed fight.",
          "poster_path": "https://images-na.ssl-images-amazon.com/images/I/71XwrZLWOBL._SY450_.jpg",
          "release_date": "2003",
          "runtime": 150,
          "tagline": "Oscar-winning Movies",
          "title": "Kill Bill: Vol. 1",
          "vote_average": 4.5,
        },
        Object {
          "genres": Array [
            "comedies",
          ],
          "id": 5,
          "overview": "Don't miss the fun in this hilariously sexy comedy that has Antonio Banderas (Once Upon a Time in Mexico), Madonna (Swept Away), and a sizzling all-star cast checking in for laughs! It's Ted the Bellhop's (Tim Roth, Pulp Fiction) first night on the job...and the hotel's very unusual guests are about to place him in some outrageous predicaments.",
          "poster_path": "https://images-na.ssl-images-amazon.com/images/I/51qcn-rYWqL._SY450_.jpg",
          "release_date": "1995",
          "runtime": 97,
          "tagline": "Oscar-winning Movies",
          "title": "Four rooms",
          "vote_average": 3,
        },
        Object {
          "genres": Array [
            "action",
            "adventure",
          ],
          "id": 6,
          "overview": "From groundbreaking writer and director Quentin Tarantino KILL BILL VOLUME 1 stars Uma Thurman, Lucy Liu, and Vivica A. Fox in an epic vendetta! Four years after taking a bullet in the head at her own wedding, The Bride emerges from a coma and decides it's time for payback! Having been gunned down by her former boss and his deadly squad of international assassins, it's a kill-or- be- killed fight.",
          "poster_path": "https://images-na.ssl-images-amazon.com/images/I/71XwrZLWOBL._SY450_.jpg",
          "release_date": "2003",
          "runtime": 150,
          "tagline": "Oscar-winning Movies",
          "title": "Kill Bill: Vol. 1",
          "vote_average": 4.5,
        },
        Object {
          "genres": Array [
            "comedies",
          ],
          "id": 7,
          "overview": "Don't miss the fun in this hilariously sexy comedy that has Antonio Banderas (Once Upon a Time in Mexico), Madonna (Swept Away), and a sizzling all-star cast checking in for laughs! It's Ted the Bellhop's (Tim Roth, Pulp Fiction) first night on the job...and the hotel's very unusual guests are about to place him in some outrageous predicaments.",
          "poster_path": "https://images-na.ssl-images-amazon.com/images/I/51qcn-rYWqL._SY450_.jpg",
          "release_date": "1995",
          "runtime": 97,
          "tagline": "Oscar-winning Movies",
          "title": "Four rooms",
          "vote_average": 3,
        },
      ],
    },
    "type": "SET_MOVIE_LIST",
  },
]
`;

exports[`actions create SET_SEARCH 1`] = `
Array [
  Object {
    "payload": Object {
      "searchValue": "cats",
    },
    "type": "SET_SEARCH",
  },
]
`;

exports[`actions create SET_SEARCH_BY 1`] = `
Array [
  Object {
    "payload": Object {
      "filterValue": "genres",
    },
    "type": "SET_SEARCH_BY",
  },
]
`;

exports[`actions create SET_SORT_BY 1`] = `
Array [
  Object {
    "payload": Object {
      "filterValue": "vote_average",
    },
    "type": "SET_SORT_BY",
  },
]
`;

exports[`async actions create SET_MOVIE when fetching has been done 1`] = `
Array [
  Object {
    "payload": Object {
      "movie": Object {},
    },
    "type": "SET_MOVIE",
  },
]
`;

exports[`async actions create SET_MOVIE_LIST when fetching has been done 1`] = `
Array [
  Object {
    "payload": Object {
      "movies": Array [
        Object {
          "budget": 0,
          "genres": Array [
            "Mystery",
            "Thriller",
          ],
          "id": 412302,
          "overview": "A heinous crime tests the complex relationship between a tenacious personal assistant and her Hollywood starlet boss. As the assistant travels across Los Angeles to unravel the mystery, she must stay one step ahead of a determined policeman and confront her own understanding of friendship, truth and celebrity.",
          "poster_path": "https://image.tmdb.org/t/p/w500/oIltQs7MPk7VQFG3DJfgC63mShU.jpg",
          "release_date": "2018-03-30",
          "revenue": 0,
          "runtime": 92,
          "tagline": "",
          "title": "Gemini",
          "vote_average": 10,
          "vote_count": 3,
        },
        Object {
          "budget": 13200000,
          "genres": Array [
            "Comedy",
            "Drama",
            "Romance",
          ],
          "id": 19404,
          "overview": "Raj is a rich, carefree, happy-go-lucky second generation NRI. Simran is the daughter of Chaudhary Baldev Singh, who in spite of being an NRI is very strict about adherence to Indian values. Simran has left for India to be married to her childhood fiancé. Raj leaves for India with a mission at his hands, to claim his lady love under the noses of her whole family. Thus begins a saga.",
          "poster_path": "https://image.tmdb.org/t/p/w500/uC6TTUhPpQCmgldGyYveKRAu8JN.jpg",
          "release_date": "1995-10-20",
          "revenue": 100000000,
          "runtime": 190,
          "tagline": "Come... Fall in Love",
          "title": "Dilwale Dulhania Le Jayenge",
          "vote_average": 9.2,
          "vote_count": 1297,
        },
        Object {
          "budget": 0,
          "genres": Array [
            "Drama",
            "Romance",
          ],
          "id": 425895,
          "overview": "In the world of semi-pro basketball, a beautiful bookie recruits a naïve but promising player to the underworld of game-fixing.",
          "poster_path": "https://image.tmdb.org/t/p/w500/lt03HzS8tfDg5ipUQcLqIRNs0sC.jpg",
          "release_date": "2016-11-14",
          "revenue": 0,
          "runtime": 100,
          "tagline": "",
          "title": "Tisay",
          "vote_average": 9,
          "vote_count": 1,
        },
        Object {
          "budget": 0,
          "genres": Array [
            "Drama",
          ],
          "id": 511679,
          "overview": "",
          "poster_path": "https://image.tmdb.org/t/p/w500/jwJoURyfm4XxtnYRtIOS2pYR9Np.jpg",
          "release_date": "2018-03-22",
          "revenue": 0,
          "runtime": 90,
          "tagline": "",
          "title": "Héctor El Father: Conocerás la verdad",
          "vote_average": 8.8,
          "vote_count": 5,
        },
        Object {
          "budget": 25000000,
          "genres": Array [
            "Drama",
            "Crime",
          ],
          "id": 278,
          "overview": "Framed in the 1940s for the double murder of his wife and her lover, upstanding banker Andy Dufresne begins a new life at the Shawshank prison, where he puts his accounting skills to work for an amoral warden. During his long stretch in prison, Dufresne comes to be admired by the other inmates -- including an older prisoner named Red -- for his integrity and unquenchable sense of hope.",
          "poster_path": "https://image.tmdb.org/t/p/w500/9O7gLzmreU0nGkIB6K3BsJbzvNv.jpg",
          "release_date": "1994-09-23",
          "revenue": 28341469,
          "runtime": 142,
          "tagline": "Fear can hold you prisoner. Hope can set you free.",
          "title": "The Shawshank Redemption",
          "vote_average": 8.6,
          "vote_count": 9868,
        },
        Object {
          "budget": 0,
          "genres": Array [
            "Comedy",
            "Drama",
            "Romance",
          ],
          "id": 418827,
          "overview": "A sexy brother-in-law approached her? And he’s a younger man?  Mi-yeon, who was adopted into her family when she was little, is living with her older sister, Si-yeon and Si-yeon’s husband. Mi-yeon’s desire towards her brother-in-law grows more and more every night when she gets to watch the affectionate interaction between her older sister and the brother-in-law. One day, Mi-yeon seduces her brother-in-law and the two end up crossing the line when they should not have. As the situation goes on, Mi-yeon finds out her older sister is also having affairs outside the marriage. Mi-yeon tries to clear up the relationship with her brother-in-law out of guilty feeling. However, she hears something shocking from the brother-in-law.",
          "poster_path": "https://image.tmdb.org/t/p/w500/wKCkyb7dyDTbZn7qy6zh8oqtFrT.jpg",
          "release_date": "2016-10-11",
          "revenue": 0,
          "runtime": 75,
          "tagline": "A sexy brother-in-law approached her? And he’s a younger man?",
          "title": "Sister's Younger Husband",
          "vote_average": 8.5,
          "vote_count": 2,
        },
        Object {
          "budget": 6000000,
          "genres": Array [
            "Drama",
            "Crime",
          ],
          "id": 238,
          "overview": "Spanning the years 1945 to 1955, a chronicle of the fictional Italian-American Corleone crime family. When organized crime family patriarch, Vito Corleone barely survives an attempt on his life, his youngest son, Michael steps in to take care of the would-be killers, launching a campaign of bloody revenge.",
          "poster_path": "https://image.tmdb.org/t/p/w500/rPdtLWNsZmAtoZl9PK7S2wE3qiS.jpg",
          "release_date": "1972-03-14",
          "revenue": 245066411,
          "runtime": 175,
          "tagline": "An offer you can't refuse.",
          "title": "The Godfather",
          "vote_average": 8.5,
          "vote_count": 7437,
        },
        Object {
          "budget": 0,
          "genres": Array [
            "Romance",
            "Animation",
            "Drama",
          ],
          "id": 372058,
          "overview": "High schoolers Mitsuha and Taki are complete strangers living separate lives. But one night, they suddenly switch places. Mitsuha wakes up in Taki’s body, and he in hers. This bizarre occurrence continues to happen randomly, and the two must adjust their lives around each other.",
          "poster_path": "https://image.tmdb.org/t/p/w500/xq1Ugd62d23K2knRUx6xxuALTZB.jpg",
          "release_date": "2016-08-26",
          "revenue": 355398372,
          "runtime": 106,
          "tagline": "",
          "title": "Your Name.",
          "vote_average": 8.5,
          "vote_count": 2129,
        },
        Object {
          "budget": 22000000,
          "genres": Array [
            "Drama",
            "History",
            "War",
          ],
          "id": 424,
          "overview": "The true story of how businessman Oskar Schindler saved over a thousand Jewish lives from the Nazis while they worked as slaves in his factory during World War II.",
          "poster_path": "https://image.tmdb.org/t/p/w500/yPisjyLweCl1tbgwgtzBCNCBle.jpg",
          "release_date": "1993-11-29",
          "revenue": 321365567,
          "runtime": 195,
          "tagline": "Whoever saves one life, saves the world entire.",
          "title": "Schindler's List",
          "vote_average": 8.4,
          "vote_count": 5574,
        },
        Object {
          "budget": 17000000,
          "genres": Array [
            "Comedy",
            "Drama",
            "Romance",
          ],
          "id": 449176,
          "overview": "Everyone deserves a great love story. But for seventeen-year old Simon Spier it’s a little more complicated: he’s yet to tell his family or friends he’s gay and he doesn’t actually know the identity of the anonymous classmate he’s fallen for online.",
          "poster_path": "https://image.tmdb.org/t/p/w500/5YUYg5q7QfC4IoNwNUtiwdiYKPr.jpg",
          "release_date": "2018-03-16",
          "revenue": 11800000,
          "runtime": 110,
          "tagline": "He's done keeping his story straight.",
          "title": "Love, Simon",
          "vote_average": 8.4,
          "vote_count": 82,
        },
      ],
    },
    "type": "SET_MOVIE_LIST",
  },
]
`;
